Fix icon alignment in TreeView and Preview on Windows (#66)
Close #59

--- a/styles/icons/sidebar.less
+++ b/styles/icons/sidebar.less
@@ -19,7 +19,7 @@ atom-panel-container > atom-panel {
       // top: 7px;
 
       .platform-win32 & {
-        top: 12px;
+        top: 0;
       }
     }
   }
@@ -42,7 +42,7 @@ atom-panel-container > atom-panel {
 
         .platform-win32 & {
           margin-top: 0;
-          top: 12px;
+          top: 0;
         }
       }
     }
